[gd_scene load_steps=15 format=2]

[ext_resource path="res://Monster/skeleton/scrips/skeleton.gd" type="Script" id=1]
[ext_resource path="res://Monster/skeleton/scenes/DamageArea.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Barra_Vida.tscn" type="PackedScene" id=4]
[ext_resource path="res://Monster/skeleton/sprites/skeleton_all_anim.png" type="Texture" id=5]
[ext_resource path="res://Monster/skeleton/sound/skeleton_walk.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.2029, 4.92512 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.45, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 9 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 8 )

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DamageArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("skeleton_walk:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/DamageArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="skeleton" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 21
frame = 17

[node name="DamageArea" type="Area2D" parent="Sprite" groups=[
"hostil",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DamageArea"]
position = Vector2( 15.685, 7.98509 )
shape = SubResource( 1 )
disabled = true

[node name="AttackArea" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 16, 8 )
shape = SubResource( 2 )

[node name="ActorDetector" type="Area2D" parent="Sprite"]
position = Vector2( 54, 7 )
scale = Vector2( 20, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/ActorDetector"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DamageDetector" type="Area2D" parent="Sprite" groups=[
"hostil",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/DamageDetector"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 6 )
anims/die = SubResource( 7 )
anims/take_damage = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="Barra_Vida" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -3 )
scale = Vector2( 0.025, 0.025 )

[node name="skeleton_walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 100.0
attenuation = 1.31951
bus = "Sound_effect"
[connection signal="area_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_entered" from="Sprite/ActorDetector" to="." method="_on_ActorDetector_area_entered"]
[connection signal="area_exited" from="Sprite/ActorDetector" to="." method="_on_ActorDetector_area_exited"]
[connection signal="area_entered" from="Sprite/DamageDetector" to="." method="_on_DamageDetector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
